Klar for trening
mangler noen store filer hvis man ikke skal trene på nytt

--- a/Martin/Test/training.ipynb
+++ b/Martin/Test/training.ipynb
@@ -10,16 +10,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.6-candidate"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.4 64-bit",
-   "metadata": {
-    "interpreter": {
-     "hash": "cfd0532777b51c3d32f7f5f3ed4aa117af564e4b4f3769f45cd584a4bc87f6b7"
-    }
+   "name": "python386jvsc74a57bd0f3b6685f8229bfdb05f68a645283f38a241332dcd8b5fbfb6b6333365134a06a",
+   "display_name": "Python 3.8.6 64-bit"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "f3b6685f8229bfdb05f68a645283f38a241332dcd8b5fbfb6b6333365134a06a"
    }
   }
  },
@@ -149,9 +149,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\Martin\\AppData\\Local\\Programs\\Python\\Python38\\lib\\site-packages\\transformers\\data\\datasets\\language_modeling.py:124: FutureWarning: This dataset will be removed from the library soon, preprocessing should be handled with the 🤗 Datasets library. You can have a look at this example script for pointers: https://github.com/huggingface/transformers/blob/master/examples/language-modeling/run_mlm.py\n",
+      "  warnings.warn(\n",
+      "<transformers.data.datasets.language_modeling.LineByLineTextDataset object at 0x000002AB4BE776D0>\n"
+     ]
+    }
+   ],
    "source": [
     "'''\n",
     "class textDataset(t.utils.data.Dataset):\n",
@@ -188,7 +198,8 @@
     "        mlm = False\n",
     "    )\n",
     "    return train_dataset, test_dataset, data_collator\n",
-    "train_dataset, test_dataset, data_collator = load_text_dataset(\"train.txt\", \"test.txt\", tokenizer)"
+    "train_dataset, test_dataset, data_collator = load_text_dataset(\"train.txt\", \"test.txt\", tokenizer)\n",
+    "print(train_dataset)"
    ]
   },
   {
@@ -240,6 +251,7 @@
     "    weight_decay=0.01,\n",
     "    logging_dir='./logs',\n",
     "    logging_steps=100,\n",
+    "    save_steps=100, \n",
     ")\n",
     "trainer = tfs.Trainer(\n",
     "    model = model,\n",
@@ -248,7 +260,7 @@
     "    train_dataset=train_dataset,\n",
     "    eval_dataset=test_dataset,\n",
     ")\n",
-    "trainer.train()"
+    "trainer.train()\n"
    ]
   },
   {
@@ -273,10 +285,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generate_text(prefix, tokens_pr_gen=20):\n",
+    "def generate_text(prefix, tokens_pr_gen=20, generator=text_generator):\n",
     "    encoded_input = tokenizer(prefix, add_special_tokens=True, return_tensors=\"pt\")\n",
     "    length = len(encoded_input[\"input_ids\"][0])\n",
-    "    return generator(prefix, max_length = length+tokens_pr_gen, num_return_sequences=1)[0][\"generated_text\"]"
+    "    return generator(prefix, max_length = length+tokens_pr_gen, num_return_sequences=1, repetition_penalty=1.2)[0][\"generated_text\"]"
    ]
   },
   {
